filter working, resized catalog, restructured markup

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <header>
                     <form action="/" method="post">
                         <label for="catalog_search">
-                            <input id="catalog_search" type="text" name="catalog_search" placeholder="Search">
+                            <input id="catalog_search" type="text" name="catalog_search" onkeyup="search()" placeholder="Search">
                             <i class="material-icons">search</i>
                         </label>
                     </form>
@@ -153,129 +153,156 @@
                 </header>
                 <article>
                     <div class="list">
-                        <span class="heading">A</span>
-                        <span>AccessGuardian</span>
-                        <span>AlphaGuard</span>
-                        <span>ArmorAuth</span>
-                        <span>AuthLink</span>
-                        <span class="heading">B</span>
-                        <span>BioFortress</span>
-                        <span>BioLock</span>
-                        <span>BioShield</span>
-                        <span>BitSecure</span>
-                        <span class="heading">C</span>
-                        <span>CipherAuth</span>
-                        <span>CodeSecure</span>
-                        <span>CyberGuard</span>
-                        <span>CyberLock</span>
-                        <span class="heading">D</span>
-                        <span>DataGuard</span>
-                        <span>DataShield</span>
-                        <span>DefendGuard</span>
-                        <span>DefendX</span>
-                        <span class="heading">E</span>
-                        <span>EncryptEZ</span>
-                        <span>EncryptX</span>
-                        <span>EnduroAuth</span>
-                        <span>EnduroShield</span>
-                        <span class="heading">F</span>
-                        <span>FirewallAuth</span>
-                        <span>FortiAuth</span>
-                        <span>FortLock</span>
-                        <span>FortifyAuth</span>
-                        <span class="heading">G</span>
-                        <span>GuardianSafe</span>
-                        <span>GuardianX</span>
-                        <span>GuardianXtreme</span>
-                        <span>GuardPass</span>
-                        <span class="heading">H</span>
-                        <span>HackShield</span>
-                        <span>HyperGuard</span>
-                        <span>HyperKey</span>
-                        <span>HyperLock</span>
-                        <span class="heading">I</span>
-                        <span>IDLock</span>
-                        <span>IronFortress</span>
-                        <span>IronKey</span>
-                        <span>IronShield</span>
-                        <span class="heading">J</span>
-                        <span>JavaAuth</span>
-                        <span>JumboAuth</span>
-                        <span>JumboKey</span>
-                        <span>JumboLock</span>
-                        <span class="heading">K</span>
-                        <span>KeyDefend</span>
-                        <span>KeyMaster</span>
-                        <span>KeyPass</span>
-                        <span>KeySecure</span>
-                        <span class="heading">L</span>
-                        <span>LockMaster</span>
-                        <span>LockNGuard</span>
-                        <span>LockNKey</span>
-                        <span>LockOut</span>
-                        <span class="heading">M</span>
-                        <span>MobileAuth</span>
-                        <span>MobileFortress</span>
-                        <span>MobileGuard</span>
-                        <span>MobileShield</span>
-                        <span class="heading">N</span>
-                        <span>NetDefender</span>
-                        <span>NetFortify</span>
-                        <span>NetGuard</span>
-                        <span>NetLock</span>
-                        <span class="heading">O</span>
-                        <span>OmniAuth</span>
-                        <span>OmniGuard</span>
-                        <span>OmniLock</span>
-                        <span class="heading">P</span>
-                        <span>PassFortress</span>
-                        <span>PassGuard</span>
-                        <span>PassKey</span>
-                        <span>PassLock</span>
-                        <span class="heading">Q</span>
-                        <span>QuantumAuth</span>
-                        <span>QuantumGuard</span>
-                        <span>QuantumShield</span>
-                        <span class="heading">R</span>
-                        <span>QuickAuth</span>
-                        <span>RapidGuard</span>
-                        <span>RapidKey</span>
-                        <span>RapidLock</span>
-                        <span class="heading">S</span>
-                        <span>RiskBlock</span>
-                        <span>SafeKey</span>
-                        <span>SafeSign</span>
-                        <span>SecureAccess</span>
-                        <span class="heading">T</span>
-                        <span>SecureNet</span>
-                        <span>TokenTrust</span>
-                        <span>TrustFortify</span>
-                        <span>TrustGuard</span>
-                        <span class="heading">U</span>
-                        <span>UniFortify</span>
-                        <span>UniKey</span>
-                        <span>UniLock</span>
-                        <span class="heading">V</span>
-                        <span>VaultDefend</span>
-                        <span>VaultGuard</span>
-                        <span>VaultSafe</span>
-                        <span>VaultShield</span>
-                        <span class="heading">W</span>
-                        <span>WebDefender</span>
-                        <span>WebFortress</span>
-                        <span>WebGuard</span>
-                        <span>WebShield</span>
-                        <span class="heading">X</span>
-                        <span>XecureAccess</span>
-                        <span>XtraGuard</span>
-                        <span>XtraLock</span>
-                        <span>XtraSecure</span>
-                        <span class="heading">Y</span>
-                        <span>YourShield</span>
-                        <span class="heading">Z</span>
-                        <span>ZoneAuth</span>
-                        <span>ZoneFortify</span>
-                        <span>ZoneSecure</span>
+                        <div data-label="A">
+                            <span Popular>AccessGuardian</span>
+                            <span Popular>AlphaGuard</span>
+                            <span Popular Student>ArmorAuth</span>
+                            <span Popular Employee>AuthLink</span>
+                        </div>
+                        <div data-label="B">
+                            <span>BioFortress</span>
+                            <span>BioLock</span>
+                            <span>BioShield</span>
+                            <span>BitSecure</span>
+                        </div>
+                        <div data-label="C">
+                            <span Student>CipherAuth</span>
+                            <span Student>CodeSecure</span>
+                            <span Student Popular>CyberGuard</span>
+                            <span Student Employee>CyberLock</span>
+                        </div>
+                        <div data-label="D">                        
+                            <span>DataGuard</span>
+                            <span>DataShield</span>
+                            <span>DefendGuard</span>
+                            <span>DefendX</span>
+                        </div>
+                        <div data-label="E">
+                            <span Employee>EncryptEZ</span>
+                            <span Employee>EncryptX</span>
+                            <span Employee Popular>EnduroAuth</span>
+                            <span Employee Student>EnduroShield</span>
+                        </div>
+                        <div data-label="F">
+                            <span>FirewallAuth</span>
+                            <span>FortiAuth</span>
+                            <span>FortLock</span>
+                            <span>FortifyAuth</span>
+                        </div>
+                        <div data-label="G">
+                            <span>GuardianSafe</span>
+                            <span>GuardianX</span>
+                            <span>GuardianXtreme</span>
+                            <span>GuardPass</span>
+                        </div>
+                        <div data-label="H">
+                            <span>HackShield</span>
+                            <span Employee>HyperGuard</span>
+                            <span>HyperKey</span>
+                            <span>HyperLock</span>
+                        </div>
+                        <div data-label="I">
+                            <span>IDLock</span>
+                            <span>IronFortress</span>
+                            <span>IronKey</span>
+                            <span>IronShield</span>
+                        </div>
+                        <div data-label="J">
+                            <span>JavaAuth</span>
+                            <span>JumboAuth</span>
+                            <span>JumboKey</span>
+                            <span>JumboLock</span>
+                        </div>
+                        <div data-label="K">
+                            <span>KeyDefend</span>
+                            <span>KeyMaster</span>
+                            <span>KeyPass</span>
+                            <span>KeySecure</span>
+                        </div>
+                        <div data-label="L">
+                            <span>LockMaster</span>
+                            <span>LockNGuard</span>
+                            <span>LockNKey</span>
+                            <span>LockOut</span>
+                        </div>
+                        <div data-label="M">
+                            <span>MobileAuth</span>
+                            <span>MobileFortress</span>
+                            <span>MobileGuard</span>
+                            <span>MobileShield</span>
+                        </div>
+                        <div data-label="N">
+                            <span>NetDefender</span>
+                            <span>NetFortify</span>
+                            <span>NetGuard</span>
+                            <span>NetLock</span>
+                        </div>
+                        <div data-label="O">
+                            <span>OmniAuth</span>
+                            <span>OmniGuard</span>
+                            <span>OmniLock</span>
+                        </div>
+                        <div data-label="P">
+                            <span>PassFortress</span>
+                            <span>PassGuard</span>
+                            <span>PassKey</span>
+                            <span>PassLock</span>
+                        </div>
+                        <div data-label="Q">
+                            <span>QuantumAuth</span>
+                            <span>QuantumGuard</span>
+                            <span>QuantumShield</span>
+                            <span>QuickAuth</span>
+                        </div>
+                        <div data-label="R">
+                            <span>RapidGuard</span>
+                            <span>RapidKey</span>
+                            <span>RapidLock</span>
+                            <span>RiskBlock</span>
+                        </div>
+                        <div data-label="S">
+                            <span>SafeKey</span>
+                            <span>SafeSign</span>
+                            <span>SecureAccess</span>
+                            <span>SecureNet</span>
+                        </div>
+                        <div data-label="T">
+                            <span>TokenTrust</span>
+                            <span>TrustFortify</span>
+                            <span>TrustGuard</span>
+                        </div>
+                        <div data-label="U">
+                            <span>UniFortify</span>
+                            <span>UniKey</span>
+                            <span>UniLock</span>
+                        </div>
+                        <div data-label="V">
+                            <span>VaultDefend</span>
+                            <span>VaultGuard</span>
+                            <span>VaultSafe</span>
+                            <span>VaultShield</span>
+                        </div>
+                        <div data-label="W">
+                            <span>WebDefender</span>
+                            <span>WebFortress</span>
+                            <span>WebGuard</span>
+                            <span>WebShield</span>
+                        </div>
+                        <div data-label="X">
+                            <span>XecureAccess</span>
+                            <span>XtraGuard</span>
+                            <span>XtraLock</span>
+                            <span>XtraSecure</span>
+                        </div>
+                        <div data-label="Y">
+                            <span>YourShield</span>
+                        </div>
+                        <div data-label="Z">
+                            <span>ZoneAuth</span>
+                            <span>ZoneFortify</span>
+                            <span>ZoneSecure</span>
+                        </div>
+     
 
                     </div>
                     <!-- <div filter>
