search filter and filter fix

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <h1>Calendar</h1>
             </a>
             <span>View upcoming academic events</span>
-                <span onclick="myFunction()" class = "dropbtn" data-icon="menu">Sections</span>
+                <span onclick="dropdownFunction()" class = "dropbtn" data-icon="menu">Sections</span>
                 <div class="dropdown-menu" id="dropdown-menu">
                     <span class="changeableContent" id="campuslifeDropdown">Campus Life</span>
                     <span class="changeableContent" id="artsDropdown">Arts</span>
