fixed search list to work with filter

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                 <header>
                     <form action="/" method="post">
                         <label for="catalog_search">
-                            <input id="catalog_search" type="text" name="catalog_search" onkeyup="search()" placeholder="Search">
+                            <!-- onkeyup="search()"  -->
+                            <input id="catalog_search" type="text" name="catalog_search" placeholder="Search">
                             <i class="material-icons">search</i>
                         </label>
                     </form>
